Add further info to the home page. Edited header information.

--- a/alphabet.html
+++ b/alphabet.html
@@ -24,11 +24,11 @@
                     </li>
 
                     <li>
-                        <a href="alphabet.html">The Hebrew Alphabet</a>
+                        <a href="alphabet.html" class="active">The Hebrew Alphabet</a>
                     </li>
 
                     <li>
-                        <a href="words.html">Common Hebrew Phrases</a>
+                        <a href="words.html" class="active">Common Hebrew Words and Phrases</a>
                     </li>
                 </ul>
             </nav>
