--- a/index.html
+++ b/index.html
@@ -16,24 +16,28 @@
 <body>
     <header>
 
+        <!-- <div id="header-image">
+            <img src="assets" alt="">
+        </div> -->
+
         <nav id="menu">
-            <nav>
-                <ul>
 
+            <ul>
 
-                    <li>
-                        <a href="index.html">Home</a>
-                    </li>
+                <li>
+                    <a href="index.html" class="active">Home</a>
+                </li>
 
-                    <li>
-                        <a href="alphabet.html">The Hebrew Alphabet</a>
-                    </li>
+                <li>
+                    <a href="alphabet.html">The Hebrew Alphabet</a>
+                </li>
 
-                    <li>
-                        <a href="words.html">Common Hebrew Phrases</a>
-                    </li>
-                </ul>
-            </nav>
+                <li>
+                    <a href="words.html" class="active">Common Hebrew Words and Phrases</a>
+                </li>
+
+            </ul>
+        </nav>
 
 
     </header>
@@ -63,11 +67,12 @@
             <p>
                 Hebrew ceased to be an everyday spoken language sometime between 200 and 400 CE, declining in the
                 aftermath of the Bar Kokhba revolt. Aramaic and, to a lesser extent, Greek were already in use as
-                international languages, especially among elites and immigrants. Hebrew survived into the medieval
+                international languages, especially among elites, immigrants and generally the Jewish diaspora. Hebrew
+                survived into the medieval
                 period as the language of Jewish liturgy, rabbinic literature, intra-Jewish commerce, and poetry.
                 With the rise of Zionism in the 19th century, it was revived as a spoken and literary language,
-                becoming the main language of the Yishuv (body of Jewish residents prior to the establishment of the
-                State of Israel in 1948 and subsequently of the State of Israel.
+                becoming the main language of the Yishuv and subsequently of the State of Israel. Yishuv was the name
+                given to the body of Jewish residents prior to the establishment of the State of Israel in 1948.
                 In 2013, Modern Hebrew was spoken by over nine million people worldwide. After Israel, the United
                 States has the second largest Hebrew-speaking population, with about 220,000 fluent speakers, mostly
                 from Israel.
@@ -81,27 +86,58 @@
                 The Samaritan dialect is also the liturgical tongue of the Samaritans, while modern Hebrew or Arabic
                 is their vernacular. As a foreign language, Hebrew is one of the most studied languages in the world,
                 mostly by Jews and people with Jewish ancestry,
-                students of Judaism and
-                Israel, by archaeologists (specifically the ones who research the Biblical period) and linguists
-                specializing in the Middle East and its civilizations,
+                students who study Judaism and Israel, by archaeologists (specifically the ones who research the
+                Biblical period) and linguists
+                specializing in the languages of Middle East and its civilizations,
                 by theologians and students in Christian seminaries.
                 Nearly all of the Hebrew Bible (in Judaism the <i>Tanakh</i>) is written in Biblical Hebrew, with much
                 of
                 its present form in the dialect that scholars believe flourished around the 6th century BCE, around
-                the time of the Babylonian captivity. For this reason, since ancient times, Hebrew has been referred to
-                by Jews as <i>Lashon
-                    Hakodesh</i> (לשון הקודש), "the holy language" or "the language of holiness”.
-                Many ultra-orthodox will only use it for prayer and liturgy, while using Yiddish, Ladino and other
-                languages and dialects for day to day communication.
+                the time of the Babylonian captivity.
+
+            </p>
+                <h2><i>Lashon HaKodesh</i> - Hebrew as a holy language</h2>
+            <p> Hebrew stopped being used as a day to day language over two millennia ago, and it was only mainly used
+                for religious activities and for liturgy. Also, according to Genesis, God created the world using words, 
+                which meant that the Hebrew language is holy and has supernatural powers. 
+                Many religious Jewish movements and schools of thought focused on studying the Hebrew language, Kabbalah
+                mainly talks about a secret language code hidden in the Hebrew Bible.  
+                For all of these reasons, in Judaism, Hebrew language has been referred to as <i>Lashon HaKodesh</i> (לשון הקודש),
+                "the holy language" or "the language of holiness”.
+                Out of respect for the language, many ultra-orthodox currently only use it for prayer and liturgy, 
+                while using Yiddish, Ladino and other languages and dialects for day to day communication.
+            </p>
+
+            <h2> Revival of the Hebrew Language</h2>
+            <p>
+                Throughout the past centuries, there have been many attempts to revive the Hebrew language, the most 
+                successful one was in the 19th century, when Eliezer Ben-Yehuda joined the Jewish national movement, also 
+                known as Zionism, and he immigrated to Palestine, that was part of the Ottoman Empire. He helped establish schools
+                where Hebrew was taught and he developped tools that made the literary and liturgical Hebrew into a spoken
+                language. This whole process also included borrowing words from several European languages for words that
+                did not exist in Hebrew. Ahad Ha'Am also plays a part in this revival process, he founds the Hebrew monthly
+                <i> Ha-Shiloaḥ</i>, Hebrew language literary journa at the beginning of twentieth century which is published in Warsaw. 
 
             </p>
 
             <p>
+                After the fall of the Ottoman empire, the Brittish Mandate of Palestine started in 1920, this recognized Hebrew as one
+                of the three official languages, together with English and Arabic. This coincided with a huge wave of immigrants 
+                coming to the country, mainly as a result of first world war. Since everyone was speaking a different language, There
+                was a great need for people to communicate, this led to the establishment of the Academy of the Hebrew Language. 
+                Some Hassidic and ultra-orthodox Jews refused to speak Hebrew, as they considered the language to be holy and
+                it was blasphemeous to use it for ordinary communication. 
+            </p>
+
+            <h2>Modern day Hebrew</h2>
+            <p>
                 According to <a href="https://en.wikipedia.org/wiki/Hebrew_language#Modern_Hebrew"
-                    target="_blank">Wikipedia</a> around 53% of the Israeli population speaks Hebrew as a native
+                target="_blank">Wikipedia</a> around 53% of the Israeli population speaks Hebrew as a native
                 language,
                 while most of the rest speak it fluently. Most of the other native languages spoken in Israel are
                 Russian, Arabic, French, English, Yiddish and Ladino.
+                There are ongoing efforts to keep Hebrew the main language in the state of Israel, the Academy for the HebrewLanguage 
+                invents around 2000 new Hebrew words each year as a way of 
             </p>
 
 
@@ -112,20 +148,22 @@
 
     </section>
 
-  
+
     <footer class="main-footer">
         <ul>
             <li>
-                <a href="https://twitter.com/" target="_blank" rel="noopener">Twitter</a>
+                <a href="https://twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)">Twitter</a>
             </li>
             <li>
-                <a href="https://www.facebook.com/" target="_blank" rel="noopener">Facebook</a>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)">Facebook</a>
             </li>
             <li>
-                <a href="https://www.instagram.com/" target="_blank" rel="noopener">Instagram</a>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)">Instagram</a>
             </li>
         </ul>
-
 
         <p class="copyright"> © 2021 Cristina Onea</p>
 
