--- a/words.html
+++ b/words.html
@@ -30,7 +30,7 @@
                     </li>
 
                     <li>
-                        <a href="words.html">Common Hebrew Phrases</a>
+                        <a href="words.html" class="active">Common Hebrew Words and Phrases</a>
                     </li>
                 </ul>
             </nav>
