Fix active class on header. Add image to Common Hebrew Phrases and Words page

--- a/alphabet.html
+++ b/alphabet.html
@@ -28,7 +28,7 @@
                     </li>
 
                     <li>
-                        <a href="words.html" class="active">Common Hebrew Words and Phrases</a>
+                        <a href="words.html">Common Hebrew Words and Phrases</a>
                     </li>
                 </ul>
             </nav>
@@ -230,7 +230,7 @@
                         <td>-</td>
                     </tr>
                     <tr>
-                        <td>Kaf</td>>
+                        <td>Kaf</td>
                         <td>כ</td>
                         <td>[kh]</td>
                         <td>[ch] as in <i>loch</i></td>
@@ -244,7 +244,7 @@
                         <td>-</td>
                     </tr>
                     <tr>
-                        <td>Mem</td>>
+                        <td>Mem</td>
                         <td>מ‎</td>
                         <td>[m]</td>
                         <td>-</td>
@@ -349,10 +349,14 @@
 
             </p>
 
-            <p class="vowels">
-                <img src="assets/images/hebrew_vowels.gif"
+            <div>
+                <p>
+                    <img id="vowels" src="assets/images/hebrew_vowels.gif"
                     alt="this is an image showing all Hebrew vowels and their pronunciation">
-            </p>
+                </p>  
+
+            </div>
+            
             <p>
                 Now you can watch <a
                     href="https://www.youtube.com/watch?v=GrRuqF21myQ&ab_channel=LearnHebrewwithHebrewPod101.com"
@@ -390,7 +394,7 @@
 
     <br>
     <br>
-    <br 
+    <br>
 
     <footer class="main-footer">
         <p>© 2021 Cristina Onea</p>
