--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </li>
 
                 <li>
-                    <a href="words.html" class="active">Common Hebrew Words and Phrases</a>
+                    <a href="words.html">Common Hebrew Words and Phrases</a>
                 </li>
 
             </ul>
@@ -98,13 +98,14 @@
             </p>
                 <h2><i>Lashon HaKodesh</i> - Hebrew as a holy language</h2>
             <p> Hebrew stopped being used as a day to day language over two millennia ago, and it was only mainly used
-                for religious activities and for liturgy. Also, according to Genesis, God created the world using words, 
-                which meant that the Hebrew language is holy and has supernatural powers. 
-                Many religious Jewish movements and schools of thought focused on studying the Hebrew language, Kabbalah
-                mainly talks about a secret language code hidden in the Hebrew Bible.  
-                For all of these reasons, in Judaism, Hebrew language has been referred to as <i>Lashon HaKodesh</i> (לשון הקודש),
+                for religious activities and for liturgy. According to Genesis, God created the world using words, which meant that the Hebrew language is holy. 
+                This led to a mystification of the language in Judaism, which meant
+                that this is not just an ordinary language, it is the language of God and it should be used properly.  
+                Many Jewish movements focused on studying the Hebrew language, for example Kabbalah, the esoteric Jewish 
+                mysticism, talks about a secret language code hidden in the Hebrew Bible and the language also has supernatural powers.  
+                For more than two thousand years, in Judaism, Hebrew language has been referred to as <i>Lashon HaKodesh</i> (לשון הקודש),
                 "the holy language" or "the language of holiness”.
-                Out of respect for the language, many ultra-orthodox currently only use it for prayer and liturgy, 
+                Out of respect for the holy language, many ultra-orthodox currently only use it for prayer and liturgy, 
                 while using Yiddish, Ladino and other languages and dialects for day to day communication.
             </p>
 
@@ -129,15 +130,17 @@
                 it was blasphemeous to use it for ordinary communication. 
             </p>
 
-            <h2>Modern day Hebrew</h2>
+            <h2>Modern-day Hebrew</h2>
             <p>
                 According to <a href="https://en.wikipedia.org/wiki/Hebrew_language#Modern_Hebrew"
                 target="_blank">Wikipedia</a> around 53% of the Israeli population speaks Hebrew as a native
                 language,
                 while most of the rest speak it fluently. Most of the other native languages spoken in Israel are
                 Russian, Arabic, French, English, Yiddish and Ladino.
-                There are ongoing efforts to keep Hebrew the main language in the state of Israel, the Academy for the HebrewLanguage 
-                invents around 2000 new Hebrew words each year as a way of 
+                There are ongoing efforts to keep Hebrew the main language in the state of Israel, the Academy for the Hebrew Language 
+                invents around 2000 new Hebrew words each year as a way of promoting the language and
+                encouraging people to use Hebrew more and less words from international languages
+                such as English.
             </p>
 
 
