Add styling to footer links. Add header image. Add second image to words page.

--- a/words.html
+++ b/words.html
@@ -102,7 +102,7 @@
             <p>
                 Saying <i>BeVakasha</i> is a common and polite way to respond to someone thanking you. When someone
                 says
-                <i>Toda</i> or <i>Toda raba</i>, you can simply reply with BeVakasha. It also means please.
+                <i>Toda</i> or <i>Toda raba</i>, you can simply reply with <i>BeVakasha</i>. It also means please.
             </p>
 
 
@@ -115,12 +115,28 @@
 
 
     </section>
-<br>
-<br>
 
 
     <footer class="main-footer">
-        <p>© 2021 Cristina Onea</p>
+        <ul>
+            <li>
+                <a href="https://twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)">Twitter</a>
+            </li>
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)">Facebook</a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)">Instagram</a>
+            </li>
+        </ul>
+
+        <p class="copyright"> © 2021 Cristina Onea</p>
+
     </footer>
+
+    
 
 </body>
