--- a/alphabet.html
+++ b/alphabet.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+
     <header>
         <nav id="menu">
             <nav>
@@ -58,8 +59,7 @@
             <br>
 
             <p>
-                The Hebrew Alphabet, also considered the holy language of the Hebrew Bile in Judaism, has been
-                used throughout the past two-three millennia mainly as script for Biblical Hebrew, modern
+                The Hebrew Alphabet, has been used throughout the past two-three millennia mainly as script for Biblical Hebrew, modern
                 Hebrew, Jewish Aramaic, Yiddish, and Ladino, and also some Judean-Arabic and Judean-Persian
                 dialects.
             </p>
@@ -326,18 +326,11 @@
 
             <br>
 
-            <h3>Listening and speaking practice</h3>
-            <p>When learning a new language, the best thing is to listen and try to repeat the letters and words as you
-                learn
-                them. So a Hebrew lesson wouldn't be complete without pronunciation practice, click on <a
-                    href="https://www.youtube.com/watch?v=8jBoMImEpC0&ab_channel=hebrewpodcasts" target="_blank">this
-                    YouTube link</a> to hear how the Hebrew letters sound like and give it a go as well!!
-            </p>
 
             <h3>Vowels</h3>
             <p>
                 Hebrew language has a system of dots and diacritics that helps readers determine where vowels
-                are and how to pronounce words - this is called <i>niqqud</i>. This was developped historically by the
+                are and how to pronounce words - this is called <i>Niqqud</i>. This was developped historically by the
                 Masoretes
                 (Jewish scribes and scholars) between the 5th and the 10th centuries. This was initially meant
                 to
@@ -352,16 +345,34 @@
             <div>
                 <p>
                     <img id="vowels" src="assets/images/hebrew_vowels.gif"
-                    alt="this is an image showing all Hebrew vowels and their pronunciation">
-                </p>  
+                        alt="this is an image showing all Hebrew vowels and their pronunciation">
+                </p>
 
             </div>
-            
+
+            <h3>Listening and speaking practice</h3>
+            <p>When learning a new language, the best thing is to listen and try to repeat the letters and words as you
+                learn
+                them. So a Hebrew lesson wouldn't be complete without pronunciation practice. See the links below to
+                practice the Hebrew letters and vowels. We encourage you to say the letters out loud and practice them
+                yourself! Don't be discouraged
+                if you don't get it right initially, there are many letters in Hebrew that can be difficult for
+                non-native speakers to pronounce, the goal for now is to enjoy the learning process!
+            </p>
+
             <p>
-                Now you can watch <a
-                    href="https://www.youtube.com/watch?v=GrRuqF21myQ&ab_channel=LearnHebrewwithHebrewPod101.com"
-                    target="_blank">this
-                    video</a> to get a sense of how to best pronounce the wowels.
+                <ul>
+                    <li>
+                        <a href="https://www.youtube.com/watch?v=8jBoMImEpC0&ab_channel=hebrewpodcasts"
+                            target="_blank">Hebrew alphabet practice -
+                            YouTube video</a>.
+                    </li>
+                    <li>
+                        <a href="https://www.youtube.com/watch?v=GrRuqF21myQ&ab_channel=LearnHebrewwithHebrewPod101.com"
+                            target="_blank">Vowel practice - YouTube video</a>
+
+                    </li>
+                </ul>
             </p>
 
             <h3><i>Mater Lectionis</i> (from Latin "mothers of reading")</h3>
@@ -392,12 +403,24 @@
 
     </section>
 
-    <br>
-    <br>
-    <br>
-
     <footer class="main-footer">
-        <p>© 2021 Cristina Onea</p>
+        <ul>
+            <li>
+                <a href="https://twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)">Twitter</a>
+            </li>
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)">Facebook</a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)">Instagram</a>
+            </li>
+        </ul>
+
+        <p class="copyright"> © 2021 Cristina Onea</p>
+
     </footer>
 
 
