--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 </head>
 
 <body>
-    <header>
+    <div id="header-image">
 
-        <!-- <div id="header-image">
-            <img src="assets" alt="">
-        </div> -->
+    </div>
+
+
+    <header>
 
         <nav id="menu">
 
