Add futher content and styling to the Hebrew words page

--- a/words.html
+++ b/words.html
@@ -42,75 +42,120 @@
     <h1>Common Hebrew Phrases</h1>
 
     <section>
-        <div id="main-container">
+        <div id="container-words-page">
 
             <div id="words-introduction">
                 <img id="words-picture" src="assets/images/word-shalom-manuscript.jpg"
-                alt="image from an old manuscript of the word Shalom which means Peace in Hebrew">
+                    alt="image from an old manuscript of the word Shalom which means Peace in Hebrew">
 
             </div>
+
+            <h2>Hebrew Root Words</h2>
+            <p>
+                One of the most important things to know about the Hebrew language is that most words derive from a
+                three-consonant root word that contains the intrinsic meaning of the word. This root word is called
+                'shoresh' and by adding letters at the beginning and end of the root, you get all kinds of parts of speech
+                like nouns, verbs and adjectives. 
+            </p>
 
             <h2> <i>Shalom</i> (שָׁלוֹם)</h2>
             <p>
                 Shalom is perhaps the most well known Hebrew word. It means hello, goodbye, and peace.
                 It is also found in the saying <i>Shalom Aleichem</i> (Hebrew: שָׁלוֹם עֲלֵיכֶם‎, 'Peace be upon
-                you') which
-                is also
-                a traditional song sung by Jews every Friday night upon returning home from synagogue prayer on the
-                eve of
-                the
-                Shabbat.
+                you') which is also a traditional song sung by Jews every Friday night upon returning home
+                from synagogue prayer on the eve of the Shabbat.
+
             </p>
 
-            <h2><i>Ken</i> and <i>Lo</i></h2>
+            <h2><i>Ken</i> (כֵּן) and <i>Lo</i> (לֹא)</h2>
             <p>
                 <i>Ken</i> means Yes and <i>Lo</i> means No - we can see this in the famous brand Kenvelo – which
                 literally
-                means Yes and No where <i>ve</i> means "and".
+                means Yes and No (<i>ve</i> means 'and').
             </p>
 
-            <h2><i>Slicha</i></h2>
+            <h2 class="clear"><i>Slicha</i> (סְלִיחָה)</h2>
             <p><i>Slicha</i> means sorry or excuse me.</p>
 
-            <h2><i>Toda</i></h2>
+            <h2><i>Toda</i> (תּוֹדָה)</h2>
             <p>
                 <i>Toda</i> means thank you it’s used often in the phrase <i>Toda raba</i>meaning thank you very
                 much.
             </p>
-            <h2><i>BeVakasha</i></h2>
+
+            <h2><i>BeVakasha</i> (בְּבַקָּשָׁה)</h2>
             <p>
-                Saying <i>BeVakasha</i> is a common and polite way to respond to someone thanking you. When someone
-                says
-                <i>Toda</i> or <i>Toda raba</i>, you can simply reply with BeVakasha. It also means please.
+                Im Hebrew <i>BeVakasha</i> is used as a way of saying 'with pleasure' or 'you're welcome' and 'please'.
+                When someone says
+                <i>Toda</i> 'Thank you', you can reply with <i>BeVakasha</i>. Similarly, you can ask something from
+                someone
+                using <i>BeVakasha</i> in the sentence.
             </p>
 
-            <div id="div-second-image">
+
+            <div class="clearfix">
                 <img id="second-image" src="assets/images/hebrew-letters-unsplash.jpg"
-                alt="This image shows a magnifying glass placed on Hebrew text to make the letters look bigger">
+                    alt="This image shows a magnifying glass placed on Hebrew text to make the letters look bigger">
+
+
+
+                <h2><i>Mayim</i> (מַיִם)</h2>
+                <p>
+                    <i>Mayim</i> means 'water' – the interesting fact about Mayim is that’s it’s a dual noun. Dual nouns
+                    in Hebrew usually have no singular form.
+                </p>
+
+                <h2><i>Shamayim</i> (שָׁמַיִם)</h2>
+                <p>
+                    A similar dual noun is <i>Shamayim</i> which means 'heavens' or 'skies'.
+                </p>
+
+                <h2><i>Mazel Tov</i> (מַזָּל טוֹב)</h2>
+                <p>
+                    <i>Mazel Tov</i> literally means 'good luck' and 'congratulations'. It's something people say to
+                    someone getting married.
+                </p>
+
+                <h2><i>Ma Shlomcha</i> (מָה שְׁלוֹמְךָ?)</h2>
+                <p>
+                    This is a way of saying 'How are you', it literally means 'what (is) your peace'. You probably
+                    notice the word <i>Shalom</i> in <i>Shlomcha</i> because there are from the same Hebrew root
+                    <i>Shalem</i> (שָׁלֵם) that means 'whole' and 'complete'.
+                </p>
+
+                <h2><i>Baruch HaShem</i> (בָּרוּךְ הַשֵּׁם)</h2>
+                <p>
+                    It literally means 'Blessed be the name' where name referrs to God, in Judaism you're not supposed to 
+                    pronounce God's name as his name is holy as God is holy. It's very versatile and can mean different things
+                    depending on the contex, for example it's used to say 'I can't complain' or 'It is what it is' to say you 
+                    accept a certain situation. 
+                </p>
+
+                <h2><i>Kol HaKavod</i> (כָּל הַכָּבוֹד)</h2>
+                <p>
+                    'Good job' or 'well done' (lit: all the respect).
+                </p>
+
+                <h2><i>Chaval al Ha’Zman</i> (חֲבָל עַל הַזְּמַן)</h2>
+                <p> 
+                    It literally means 'a waste of time' but it can have various meanings, colloquially, it means 'forget it'
+                    and in slang it can also be used as an expletive 'great' or 'wonderful'.
+                </p>
+
+                <h2>Slang</h2>
+                <p>
+                    There are a few slang words in Hebrew borrowed from langugaed like Arabic and Yiddish
+                </p>
+                <p></p>
+
+            
 
             </div>
 
-            <h2><i>Slicha</i></h2>
-            <p><i>Slicha</i> means sorry or excuse me.</p>
-
-            <h2><i>Toda</i></h2>
-            <p>
-                <i>Toda</i> means thank you it’s used often in the phrase <i>Toda raba</i>meaning thank you very
-                much.
-            </p>
-            <h2><i>BeVakasha</i></h2>
-            <p>
-                Saying <i>BeVakasha</i> is a common and polite way to respond to someone thanking you. When someone
-                says
-                <i>Toda</i> or <i>Toda raba</i>, you can simply reply with <i>BeVakasha</i>. It also means please.
-            </p>
-
-
-
-
-
-
         </div>
+
+
+
 
 
 
@@ -137,6 +182,6 @@
 
     </footer>
 
-    
+
 
 </body>
