Add final content to common phrases page.

--- a/alphabet.html
+++ b/alphabet.html
@@ -44,9 +44,9 @@
 
 
     <section>
-        <div id="main-container">
+        <div class="main-container">
 
-            <h2>Introduction to the Hebrew Alphabet</h2>
+        
             <br>
 
             <div id="hebrew-alphabet-introduction">
@@ -394,10 +394,6 @@
 
 
         </div>
-
-
-
-
 
 
 
