--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         </div>
 
-        <div id="main-container">
+        <div class="main-container">
 
             <h2>Introduction to the Hebrew Language</h2>
             <br>
