--- a/words.html
+++ b/words.html
@@ -54,8 +54,9 @@
             <p>
                 One of the most important things to know about the Hebrew language is that most words derive from a
                 three-consonant root word that contains the intrinsic meaning of the word. This root word is called
-                'shoresh' and by adding letters at the beginning and end of the root, you get all kinds of parts of speech
-                like nouns, verbs and adjectives. 
+                'shoresh' and by adding letters at the beginning and end of the root, you get all kinds of parts of
+                speech
+                like nouns, verbs and adjectives.
             </p>
 
             <h2> <i>Shalom</i> (שָׁלוֹם)</h2>
@@ -116,19 +117,22 @@
                     someone getting married.
                 </p>
 
-                <h2><i>Ma Shlomcha</i> (מָה שְׁלוֹמְךָ?)</h2>
+                <h2><i>Ma Shlomcha?</i> (?מָה שְׁלוֹמְךָ)</h2>
                 <p>
-                    This is a way of saying 'How are you', it literally means 'what (is) your peace'. You probably
+                    This is a way of asking someone 'How are you?', it literally means 'what (is) your peace?'. You probably
                     notice the word <i>Shalom</i> in <i>Shlomcha</i> because there are from the same Hebrew root
                     <i>Shalem</i> (שָׁלֵם) that means 'whole' and 'complete'.
                 </p>
 
                 <h2><i>Baruch HaShem</i> (בָּרוּךְ הַשֵּׁם)</h2>
                 <p>
-                    It literally means 'Blessed be the name' where name referrs to God, in Judaism you're not supposed to 
-                    pronounce God's name as his name is holy as God is holy. It's very versatile and can mean different things
-                    depending on the contex, for example it's used to say 'I can't complain' or 'It is what it is' to say you 
-                    accept a certain situation. 
+                    It literally means 'Blessed be the name' where name referrs to God, in Judaism you're not supposed
+                    to
+                    pronounce God's name as his name is holy as God is holy. It's very versatile and can mean different
+                    things
+                    depending on the contex, for example it's used to say 'I can't complain' or 'It is what it is' to
+                    say you
+                    accept a certain situation.
                 </p>
 
                 <h2><i>Kol HaKavod</i> (כָּל הַכָּבוֹד)</h2>
@@ -137,18 +141,24 @@
                 </p>
 
                 <h2><i>Chaval al Ha’Zman</i> (חֲבָל עַל הַזְּמַן)</h2>
-                <p> 
-                    It literally means 'a waste of time' but it can have various meanings, colloquially, it means 'forget it'
-                    and in slang it can also be used as an expletive 'great' or 'wonderful'.
-                </p>
-
-                <h2>Slang</h2>
                 <p>
-                    There are a few slang words in Hebrew borrowed from langugaed like Arabic and Yiddish
+                    It literally means 'a waste of time' but it can have various meanings, colloquially, it means
+                    'forget it' and in slang it can also be used as an expletive 'great' or 'wonderful'.
                 </p>
-                <p></p>
 
-            
+                <h2><i>Chutzpah</i> חֻצְפָּה </h2>
+                <p>
+                    This slang word comes from Yiddish and it means 'nerve', 'audacity'. 
+                </p>
+                <h2><i>Sababa</i> סַבָּבָּה</h2>
+                <p>This word comes from Arabic and it's a slang way of saying 'cool' or 'awesome'</p>
+
+                <h2><i>Yalla</i> יַאלְלָה</h2> 
+                <p>
+                    This slang word comes from Arabic as well and it means 'let's go', 'go ahead'.
+                </p>
+
+
 
             </div>
 
