Add content to the Common Hebrew words page. Correct punctuation and speeling typos

--- a/alphabet.html
+++ b/alphabet.html
@@ -330,7 +330,7 @@
             <h3>Vowels</h3>
             <p>
                 Hebrew language has a system of dots and diacritics that helps readers determine where vowels
-                are and how to pronounce words - this is called <i>Niqqud</i>. This was developped historically by the
+                are and how to pronounce words - this is called <i>Niqqud</i>. This was developed historically by the
                 Masoretes
                 (Jewish scribes and scholars) between the 5th and the 10th centuries. This was initially meant
                 to
@@ -353,7 +353,7 @@
             <h3>Listening and speaking practice</h3>
             <p>When learning a new language, the best thing is to listen and try to repeat the letters and words as you
                 learn
-                them. So a Hebrew lesson wouldn't be complete without pronunciation practice. See the links below to
+                them. So, a Hebrew lesson wouldn't be complete without pronunciation practice. See the links below to
                 practice the Hebrew letters and vowels. We encourage you to say the letters out loud and practice them
                 yourself! Don't be discouraged
                 if you don't get it right initially, there are many letters in Hebrew that can be difficult for
@@ -385,7 +385,7 @@
 
             <h3>Gematria</h3>
             <p>
-                Hebrew letters have numerical values. Similar to Roman numerals, letters are added together to equal a
+                Hebrew letters have numerical values. Like the Roman numerals, letters are added together to equal a
                 given number, and the letters retain their essential worth no matter where they are placed in a
                 sequence, so tav, kaf, and aleph, for example, equal 421. This system is called Gematria in Judaism.
                 In modern Israel, western numerals are used as a rule, whereas Hebrew letters are used for days of the
