--- a/words.html
+++ b/words.html
@@ -61,7 +61,7 @@
 
             <h2> <i>Shalom</i> (שָׁלוֹם)</h2>
             <p>
-                Shalom is perhaps the most well known Hebrew word. It means hello, goodbye, and peace.
+                Shalom is perhaps the most well-known Hebrew word. It means hello, goodbye, and peace.
                 It is also found in the saying <i>Shalom Aleichem</i> (Hebrew: שָׁלוֹם עֲלֵיכֶם‎, 'Peace be upon
                 you') which is also a traditional song sung by Jews every Friday night upon returning home
                 from synagogue prayer on the eve of the Shabbat.
@@ -80,13 +80,13 @@
 
             <h2><i>Toda</i> (תּוֹדָה)</h2>
             <p>
-                <i>Toda</i> means thank you it’s used often in the phrase <i>Toda raba</i>meaning thank you very
+                <i>Toda</i> means thank you it’s used often in the phrase <i>Toda raba</i> meaning thank you very
                 much.
             </p>
 
             <h2><i>BeVakasha</i> (בְּבַקָּשָׁה)</h2>
             <p>
-                Im Hebrew <i>BeVakasha</i> is used as a way of saying 'with pleasure' or 'you're welcome' and 'please'.
+                In Hebrew <i>BeVakasha</i> is used as a way of saying 'with pleasure' or 'you're welcome' and 'please'.
                 When someone says
                 <i>Toda</i> 'Thank you', you can reply with <i>BeVakasha</i>. Similarly, you can ask something from
                 someone
@@ -117,20 +117,21 @@
                     someone getting married.
                 </p>
 
-                <h2><i>Ma Shlomcha?</i> (?מָה שְׁלוֹמְךָ)</h2>
+                <h2><i>Ma Shlomcha?</i> (מָה שְׁלוֹמְךָ)</h2>
                 <p>
                     This is a way of asking someone 'How are you?', it literally means 'what (is) your peace?'. You probably
                     notice the word <i>Shalom</i> in <i>Shlomcha</i> because there are from the same Hebrew root
-                    <i>Shalem</i> (שָׁלֵם) that means 'whole' and 'complete'.
+                    <i>Shalem</i> (שָׁלֵם) that means 'whole' and 'complete'. Similarly, <i>Ma Nishma</i> (מָה נִשְׁמַע) means 'What's up?'.
+                
                 </p>
 
                 <h2><i>Baruch HaShem</i> (בָּרוּךְ הַשֵּׁם)</h2>
                 <p>
-                    It literally means 'Blessed be the name' where name referrs to God, in Judaism you're not supposed
+                    It literally means 'Blessed be the name' where name refers to God, in Judaism you're not supposed
                     to
                     pronounce God's name as his name is holy as God is holy. It's very versatile and can mean different
                     things
-                    depending on the contex, for example it's used to say 'I can't complain' or 'It is what it is' to
+                    depending on the context, for example it's used to say, 'I can't complain' or 'It is what it is' to
                     say you
                     accept a certain situation.
                 </p>
@@ -140,15 +141,28 @@
                     'Good job' or 'well done' (lit: all the respect).
                 </p>
 
+                <h2><i>Beseder</i> (בְּסֵדֶר)</h2>
+                <p>
+                    <i>Beseder</i> is used in many phrases to express that something or someone is OK. For example, <i>HaKol Beseder</i>
+                    (הַכֹּל בְּסֵדֶר) means 'everything is OK', whereas <i>Yihye BeSeder</i> (יִהְיֶה בְּסֵדֶר) means 'It will be OK' or 'no worries'.
+                </p>
+
                 <h2><i>Chaval al Ha’Zman</i> (חֲבָל עַל הַזְּמַן)</h2>
                 <p>
                     It literally means 'a waste of time' but it can have various meanings, colloquially, it means
                     'forget it' and in slang it can also be used as an expletive 'great' or 'wonderful'.
                 </p>
 
+                <h2>
+
+                </h2>
+
+                <h2><i>Nu</i> </h2>
+                <p><i>Nu</i> is a two-letter words that is used often in slang, it means 'So?', 'c’mon already', 'go on'. </p>
+
                 <h2><i>Chutzpah</i> חֻצְפָּה </h2>
                 <p>
-                    This slang word comes from Yiddish and it means 'nerve', 'audacity'. 
+                    This slang word comes from Yiddish, and it means 'nerve', 'audacity'. 
                 </p>
                 <h2><i>Sababa</i> סַבָּבָּה</h2>
                 <p>This word comes from Arabic and it's a slang way of saying 'cool' or 'awesome'</p>
