adjust image styling on common hebrew phrases page

--- a/alphabet.html
+++ b/alphabet.html
@@ -91,7 +91,7 @@
                 (אָלֶפְבֵּית).
             </p>
 
-            <h3>Dagesh</h3>
+            <h3 class="clear">Dagesh</h3>
             <p>
 
                 In modern Hebrew, the dagesh (lit. emphasis) is an accent placed in the middle of a letter that changes
